--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
+    "typescript": "^5.5.2",
     "use-debounce": "^10.0.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
-    "@types/react": "^18.2.0",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "18.2.14",
     "@vercel/style-guide": "^5.0.1",
     "dotenv": "^16.3.1",
